# rskycam

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/asi/: 99-asi.rules
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: client.ts  realApi.test.ts  realApi.ts  types.test.ts  types.ts
frontend/src/components/: ArtifactCard.test.tsx  ArtifactCard.tsx  Layout.tsx  Lightbox.test.tsx  Lightbox.tsx  Lightgraph.tsx  LocationPicker.test.tsx  LocationPicker.tsx  MoonPhaseIcon.tsx  OverlayCanvas.tsx  ui.test.tsx  ui.tsx
frontend/src/hooks/: useAuth.tsx  useDebouncedValue.test.ts  useStatus.ts
frontend/src/lib/: astro.test.ts  astro.ts  editorMath.test.ts  editorMath.ts  format.test.ts  format.ts  overlayGeometry.test.ts  overlayGeometry.ts
frontend/src/pages/: DashboardPage.test.tsx  DashboardPage.tsx  LoginPage.tsx  NightDetailPage.test.tsx  NightDetailPage.tsx  NightsPage.tsx  OverlayEditorPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx
installer/: install.sh  rskycam.service
scripts/: deploy-pi.sh
src/: auth.rs  main.rs  settings.rs  system.rs
src/camera/: mock.rs  mod.rs  rpicam.rs
src/capture/: auto_exposure.rs  mod.rs
src/overlay/: astro.rs  bake.rs  geometry.rs  mod.rs
src/processing/: keogram.rs  mod.rs  retention.rs  startrails.rs  status.rs  timelapse.rs
src/sensors/: bme280.rs  mod.rs
src/web/: api.rs  auth_layer.rs  mod.rs  nights.rs
tests/fixtures/: fake-ffmpeg  fake-rpicam-still
(+9 files in other folders)
