[package]
name = "rskycam"
version = "0.4.0"
edition = "2021"

[features]
default = []
embed-ui = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
ab_glyph = "0.2"
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["json"] }
axum-extra = { version = "0.10", features = ["cookie-signed"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.25", default-features = false }
libloading = "0.8"
mime_guess = { version = "2", optional = true }
rand = "0.8"
rust-embed = { version = "8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
time = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
i2cdev = "0.6"
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
